--- a/app/src/main/res/layout-large/activity_search_term_legazpi.xml
+++ b/app/src/main/res/layout-large/activity_search_term_legazpi.xml
@@ -4,12 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".searchTermLegazpi">
+    tools:context=".searchTermBal">
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="147dp"
-        android:layout_height="144dp"
+        android:layout_width="184dp"
+        android:layout_height="173dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
@@ -25,8 +25,8 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="368dp"
-        android:layout_height="43dp"
+        android:layout_width="504dp"
+        android:layout_height="66dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="20dp"
@@ -37,6 +37,7 @@
         android:gravity="center_vertical"
         android:shadowColor="@color/cardview_shadow_end_color"
         android:text="Showing bus terminals headed to Legazpi, Albay"
+        android:textSize="24dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -45,8 +46,8 @@
 
     <ScrollView
         android:id="@+id/scrollView2"
-        android:layout_width="373dp"
-        android:layout_height="354dp"
+        android:layout_width="508dp"
+        android:layout_height="292dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
@@ -69,7 +70,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="70dp"
                 android:gravity="left|center_vertical"
-                android:onClick="displaySuperlines"
                 android:text="SUPERLINES - Cubao"
                 tools:layout_editor_absoluteX="6dp"
                 tools:layout_editor_absoluteY="237dp" />
@@ -79,7 +79,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="70dp"
                 android:gravity="left|center_vertical"
-                android:onClick="displayDltbCub"
                 android:text="DLTB Co. - CUBAO"
                 tools:layout_editor_absoluteX="6dp"
                 tools:layout_editor_absoluteY="237dp" />
@@ -89,7 +88,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="70dp"
                 android:gravity="left|center_vertical"
-                android:onClick="displayDltbBuendia"
                 android:text="DLTB Co. - BUENDIA"
                 tools:layout_editor_absoluteX="6dp"
                 tools:layout_editor_absoluteY="237dp" />
@@ -99,7 +97,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="70dp"
                 android:gravity="left|center_vertical"
-                android:onClick="displayDltbPasay"
                 android:text="DLTB Co. - Pasay"
                 tools:layout_editor_absoluteX="6dp"
                 tools:layout_editor_absoluteY="237dp" />
