--- a/app/src/main/res/layout/activity_search_term_cab.xml
+++ b/app/src/main/res/layout/activity_search_term_cab.xml
@@ -69,6 +69,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="70dp"
                 android:gravity="left|center_vertical"
+                android:onClick="displayBuendia"
                 android:text="JAM Liner Inc. - BUENDIA"
                 tools:layout_editor_absoluteX="6dp"
                 tools:layout_editor_absoluteY="237dp" />
@@ -78,6 +79,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="70dp"
                 android:gravity="left|center_vertical"
+                android:onClick="displayKamuning"
                 android:text="JAM Liner Inc. - KAMUNING"
                 tools:layout_editor_absoluteX="6dp"
                 tools:layout_editor_absoluteY="237dp" />
