--- a/app/src/main/res/layout/activity_search_term_sta.xml
+++ b/app/src/main/res/layout/activity_search_term_sta.xml
@@ -68,6 +68,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="70dp"
                 android:gravity="left|center_vertical"
+                android:onClick="displayPhilCubao"
                 android:text="PHILTRANCO - Cubao"
                 tools:layout_editor_absoluteX="6dp"
                 tools:layout_editor_absoluteY="237dp" />
@@ -77,6 +78,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="70dp"
                 android:gravity="left|center_vertical"
+                android:onClick="displayPhilPasay"
                 android:text="PHILTRANCO - Pasay"
                 tools:layout_editor_absoluteX="6dp"
                 tools:layout_editor_absoluteY="237dp" />
