--- a/app/src/main/res/layout/activity_search_term_talugtug.xml
+++ b/app/src/main/res/layout/activity_search_term_talugtug.xml
@@ -69,6 +69,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="70dp"
                 android:gravity="left|center_vertical"
+                android:onClick="displayFivestarCubao"
                 android:text="FIVE STAR BUS TERMINAL - Cubao"
                 tools:layout_editor_absoluteX="6dp"
                 tools:layout_editor_absoluteY="237dp" />
