--- a/app/src/main/res/layout/activity_search_hp.xml
+++ b/app/src/main/res/layout/activity_search_hp.xml
@@ -50,8 +50,17 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/searchBtn"
+        android:fadingEdge="vertical"
+        android:isScrollContainer="true"
+        android:scrollbarAlwaysDrawHorizontalTrack="true"
+        android:scrollbarSize="3dp"
+        android:scrollbarStyle="insideOverlay"
+        android:scrollbars="vertical"
+        android:spinnerMode="dropdown"
+        android:theme="@style/MatchSpinnerTheme"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView3" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView3"
+        app:layout_constraintVertical_bias="0.166" />
 </android.support.constraint.ConstraintLayout>
