--- a/app/src/main/res/layout/activity_superlines_cubao.xml
+++ b/app/src/main/res/layout/activity_superlines_cubao.xml
@@ -23,6 +23,7 @@
         android:layout_marginRight="90dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/roundedbtn"
+        android:onClick="process"
         android:text="Use Location"
         android:textColor="@color/colorPrimaryDark"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -122,9 +123,11 @@
                 android:layout_height="23dp"
                 android:layout_below="@+id/textView2"
                 android:layout_alignStart="@+id/textView2"
+                android:layout_alignLeft="@id/textView2"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="true"
+                android:layout_marginLeft="0dp"
                 android:layout_marginStart="0dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="281dp"
@@ -135,8 +138,8 @@
 
             <TextView
                 android:id="@+id/textView4"
-                android:layout_width="295dp"
-                android:layout_height="21dp"
+                android:layout_width="298dp"
+                android:layout_height="40dp"
                 android:layout_below="@+id/textView2"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentLeft="true"
@@ -146,9 +149,9 @@
                 android:layout_marginStart="30dp"
                 android:layout_marginLeft="30dp"
                 android:layout_marginTop="41dp"
-                android:layout_marginEnd="43dp"
-                android:layout_marginRight="43dp"
-                android:layout_marginBottom="141dp"
+                android:layout_marginEnd="40dp"
+                android:layout_marginRight="40dp"
+                android:layout_marginBottom="121dp"
                 android:text="Camarines Sur – Caramoan, Garchitorena, Balatan, Libmanan" />
 
             <TextView
@@ -163,10 +166,10 @@
                 android:layout_alignParentBottom="true"
                 android:layout_marginStart="30dp"
                 android:layout_marginLeft="30dp"
-                android:layout_marginTop="61dp"
+                android:layout_marginTop="77dp"
                 android:layout_marginEnd="13dp"
                 android:layout_marginRight="13dp"
-                android:layout_marginBottom="119dp"
+                android:layout_marginBottom="102dp"
                 android:text="Albay – Legazpi, Tiwi, Pioduran, Pantao, Catburawan" />
 
         </RelativeLayout>
